--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ initial-scale=1.0, user-scalable=yes">
     <div id="container">
         <div id="header">
             <div id="brand">
-                <h1><a href="#">Agile the Fun Way</a></h1>
+                <h1><a href="#">DBS WORKSHOP</a></h1>
             </div>
             <div id="searchBox">
                 <form method="get">
