index.html changed

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ a topic" class="submit">
             <ul>
                 <li><a href="#">Superior quality product.</a></li>
                 <li><a href="#">Customer Satisfaction.</a></li>
-                <li><a href="#">Better control.</a></li>
+                <li><a href="https://ggogle.com">Better control.</a></li>
                 <li><a href="#">Improved project predictability.</a></li>
                 <li><a href="#">Reduced risks.</a></li>
                 <li><a href="#">Increased Flexibility.</a></li>
