added anchor tag

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ a topic" class="submit">
             <h3>Why learn Agile?</h3>
             <ul>
                 <li><a href="#">Superior quality product.</a></li>
-                <li><a href="#">Customer Satisfaction.</a></li>
+                <li><a href="http://google.com">Customer Satisfaction.</a></li>
                 <li><a href="https://ggogle.com">Better control.</a></li>
                 <li><a href="#">Improved project predictability.</a></li>
                 <li><a href="#">Reduced risks.</a></li>
